--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -1,4 +1,47 @@
 {
+  "Create Group": "zzzz",
+  "Connect your wallet": "zzzz",
+  "to load the group list": "to load the group list",
+  "Collateral": "Collateral",
+  "(min: 1 UPP)": "(min: 1 UPP)",
+  "Member Fee": "Member Fee",
+  "(min: 0.01 UPP)": "(min: 0.01 UPP)",
+  "Min ETH to join the group": "Min ETH to join the group",
+  "(min: 0.01 ETH)": "(min: 0.01 ETH)",
+  "Min ETH to start": "Min ETH to start",
+  "(min: 1 ETH)": "(min: 1 ETH)",
+  "Max ETH allowed": "Max ETH allowed",
+  "Start Timeout": "Start Timeout",
+  "(1 - 30 days)": "(1 - 30 days)",
+  "(1 - 90 days)": "(1 - 90 days)",
+  "Max Runtime": "Max Runtime",
+  "Leader Profit Take": "Leader Profit Take",
+  "(0 - 100%)": "(0 - 100%)",
+  "Token list is the default Uniswap token list": "Token list is the default Uniswap token list",
+  "Check Allowance": "Check Allowance",
+  "Checking...": "Checking...",
+  "Approve UPP": "Approve UPP",
+  "Approving...": "Approving...",
+  "Approved": "Approved",
+  "Create": "Create",
+  "Creating...": "Creating...",
+  "Created": "Created",
+  "Failed": "Failed",
+  "Cancel": "Cancel",
+  "View on Etherscan": "View on Etherscan",
+  "Close": "Close",
+  "Error": "Error",
+  "Dismiss": "Dismiss",
+  "groupCreated": "Group #{{groupId}} Created",
+  "groupJoined": "Group #{{groupId}} Joined",
+  "Join": "Join",
+  "Joining...": "Joining...",
+  "Joined": "Joined",
+  "Contribution": "Contribution",
+  "minMaxEth": "(min: {{minValue}} ETH) (max: {{maxValue}} ETH)",
+  "Show Details": "Show Details",
+  "Error approving the group. Please check the form and try again. Details: ": "Error approving the group. Please check the form and try again. Details: ",
+  "Finding...": "Finding...",
   "noWallet": "未发现以太钱包",
   "wrongNetwork": "网络错误",
   "switchNetwork": "请切换到 {{ correctNetwork }}",
