--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -3,9 +3,9 @@
   "Connect your wallet": "zzzz",
   "to load the group list": "to load the group list",
   "Collateral": "Collateral",
-  "(min: 1 UPP)": "(min: 1 UPP)",
+  "(min: 1 iFUND)": "(min: 1 iFUND)",
   "Member Fee": "Member Fee",
-  "(min: 0.01 UPP)": "(min: 0.01 UPP)",
+  "(min: 0.01 iFUND)": "(min: 0.01 iFUND)",
   "Min ETH to join the group": "Min ETH to join the group",
   "(min: 0.01 ETH)": "(min: 0.01 ETH)",
   "Min ETH to start": "Min ETH to start",
@@ -20,7 +20,7 @@
   "Token list is the default Uniswap token list": "Token list is the default Uniswap token list",
   "Check Allowance": "Check Allowance",
   "Checking...": "Checking...",
-  "Approve UPP": "Approve UPP",
+  "Approve iFUND": "Approve iFUND",
   "Approving...": "Approving...",
   "Approved": "Approved",
   "Create": "Create",
