--- a/locales/zh.json
+++ b/locales/zh.json
@@ -6,15 +6,15 @@
   "(min: 1 iFUND)": "(min: 1 iFUND)",
   "Member Fee": "Member Fee",
   "(min: 0.01 iFUND)": "(min: 0.01 iFUND)",
-  "Min ETH to join the group": "Min ETH to join the group",
+  "Max ETH accepted per member": "Max ETH accepted per member",
   "(min: 0.01 ETH)": "(min: 0.01 ETH)",
-  "Min ETH to start": "Min ETH to start",
+  "Min ETH needed for group to start": "Min ETH needed for group to start",
   "(min: 1 ETH)": "(min: 1 ETH)",
-  "Max ETH allowed": "Max ETH allowed",
-  "Start Timeout": "Start Timeout",
+  "Max ETH group will accept": "Max ETH group will accept",
+  "Max time until group start": "Max time until group start",
   "(1 - 30 days)": "(1 - 30 days)",
   "(1 - 90 days)": "(1 - 90 days)",
-  "Max Runtime": "Max Runtime",
+  "Max group running time": "Max group running time",
   "Leader Profit Take": "Leader Profit Take",
   "(0 - 100%)": "(0 - 100%)",
   "Token list is the default Uniswap token list": "Token list is the default Uniswap token list",
